jenkins/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user3-jenkins
  labels: 
    owner: user3
    app: jenkins
