jenkins/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user3-jenkins-svc
  namespace: user3-jenkins
  labels:
    app: jenkins
    owner: user3
spec:
  selector:
    app: jenkins
    owner: user3
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
  type: ClusterIP
